# Robot_web

./: .gitignore  Cargo.toml  README.md  docs.md  neo4j.dump  návod.md
js/: animus.js  dnd.js  doormat.js  hive.js  mapcraft.js  reverse.js  robot.js  sequence_processor.js  variables.js
src/: command_parser.rs  config.rs  database.rs  defines.rs  handlers.rs  main.rs  models.rs
styles/: main_style.css
templates/: command_list.html  editor.html  login.html  main.html  manual.html  signup.html  stats.html
templates/mainpage/: commands.html  conditions.html  custom_functions.html  functions.html  layout.html  map.html  navbar.html  sequence_list.html
