[package]
name = "pvs-2023-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.6.2"

dotenvy = "0.15.7"
config = "0.13.4"

rust-argon2 = "2.0"

actix-rt = "2.9.0"

actix-web = "4.4"
serde = { version = "1.0.193", features = ["derive"] }

actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-session = {version = "0.8.0", features = ["cookie-session"]}
tera = "1.19.1"
env_logger = { version = "0.10.1", features = [] }
